--- a/composer.json
+++ b/composer.json
@@ -98,6 +98,7 @@
         }
     },
     "require-dev": {
+        "fakerphp/faker": "^1.19",
         "symfony/debug-bundle": "6.0.*",
         "symfony/maker-bundle": "^1.0",
         "symfony/stopwatch": "6.0.*",
