--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,8 +22,8 @@ security:
             provider: app_user_provider
             custom_authenticator: App\Security\LoginFormAuthenticator
             logout:
-                path: app_logout
-                target: app_login
+                path: logout
+                target: login
 
 
             # activate different ways to authenticate
@@ -38,7 +38,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/admin, roles: [IS_AUTHENTICATED_FULLY, ROLE_ADMIN] }
+        - { path: ^/login, roles: PUBLIC_ACCESS}
+        - { path: ^/admin, roles: [ IS_AUTHENTICATED_FULLY, ROLE_ADMIN ] }
 
 when@test:
     security:
