--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "gedmo/doctrine-extensions": "^3.6",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.4",
+        "ramsey/uuid": "^4.3",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "6.0.*",
