--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    uploads: '%kernel.project_dir%\web\tmp\uploads\'
+    tmp: '%kernel.project_dir%\web\tmp\'
     gallery: '%kernel.project_dir%\web\uploads\'
 
 services:
